fix prompt input/output spacing

--- a/src/App.css
+++ b/src/App.css
@@ -4887,31 +4887,30 @@
   }
 
   .genAIPromptOutputContainer {
-    width: 250px;
-    background-color: var(--muted-text);
+    width: 100%;
+    background-color: transparent;
     box-sizing: border-box;
-    padding: 20px;
+    padding: 16px;
     border-radius: 16px;
     margin-top: 20px;
 
   }
 
   .genAIPromptInputContainer {
-    width: 250px;
-    background-color: var(--button-highlight);
-    color: white;
+    width: 100%;
+    background-color: transparent;
+    color: var(--primary-text);
     box-sizing: border-box;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
-    padding-top: 20px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-bottom: 16px;
+    padding-top: 16px;
     border-radius: 16px;
     margin-top: 20px;
-    margin-left: 110px;
   }
 
   .genAIPrompt:nth-child(1) {
-    padding-top: 40px;
+    padding-top: 48px;
   }
 
   .genAIPromptWrapper {
